# limitless-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_TS.md  Taskfile.yml  docker-compose.yml  mcp_config.json  mcp_config_ts.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  workflow.yml
config/: config.yml
scripts/: setup.sh
src/: __main__.py  converter.py  validator.py
src/my_project/: __main__.py
tests/: test_sample.py
ts-src/: converter.ts  index.ts  validator.ts
