[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest==8.3",
    "python-dotenv>=1.0.1",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
strict = true

[tool.ruff]
target-version = "py311"  # 対象とするPythonのバージョン
lint.select = ["E", "F", "W", "B", "I"]  # 有効にするルール
lint.ignore = []  # 無視するルール

[dependency-groups]
dev = []
