[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]

# [tool.mypy]
# python_version = "3.11"
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true
# check_untyped_defs = true
# ignore_missing_imports = true
# strict = true

[tool.ruff]
target-version = "py311"  # 対象とするPythonのバージョン
lint.select = ["E", "F", "W", "B", "I"]  # 有効にするルール
lint.ignore = ["E501"]  # 無視するルール

[dependency-groups]
dev = []
